[package]
name = "leafbk-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
jsonwebtoken = "8.0.0-beta.8"
chrono = "0.4.19"

rust-argon2 = "1.0.0"

leafbk-db = { path = "../leafbk-db" }
url = "2.2.2"