[package]
name = "leafbk-media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
jsonwebtoken = "8.0.0-beta.8"
chrono = "0.4.19"

redis = { version = "0.21.5", features  = ["tokio-comp"] }
rust-argon2 = "1.0.0"
md5 = "0.7.0"
tree_magic_mini = "3.0.3"