[package]
name = "leafbk-media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
chrono = "0.4.19"

md5 = "0.7.0"
tree_magic_mini = "3.0.3"

leafbk-auth = { path = "../leafbk-auth" }
leafbk-db = { path = "../leafbk-db" }